Update login view model to use DDD objects

--- a/StoreManagementSystemX/StoreManagementSystemX.csproj
+++ b/StoreManagementSystemX/StoreManagementSystemX.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StoreManagementSystemX.Database\StoreManagementSystemX.Database.csproj" />
+    <ProjectReference Include="..\StoreManagementX.Domain\StoreManagementSystemX.Domain.csproj" />
   </ItemGroup>
 
 </Project>
